tests/errors/imports/expandWithImport.d.ts
/**
 * @ignore
 */
import { ImportableFooWithInternal } from "../../importables/importables";

/**
 * @expand
 */
type Foo = ImportableFooWithInternal;
